--- a/OperationDigger.csproj
+++ b/OperationDigger.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\" />
+    <Folder Include="Pages\Shared\" />
+    <Folder Include="Components\" />
+  </ItemGroup>
 </Project>
