--- a/OperationDigger.csproj
+++ b/OperationDigger.csproj
@@ -11,7 +11,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -21,5 +21,7 @@
   <ItemGroup>
     <Folder Include="Pages\" />
     <Folder Include="Pages\Shared\" />
+    <Folder Include="wwwroot\Image\" />
+    <Folder Include="Views\Image\" />
   </ItemGroup>
 </Project>
