Updated the identity package

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
   pre_build:
     commands:
       - echo Restore started on `date`
+      - dotnet restore OperationDigger.csproj
       
   build:
     commands:
