--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,22 +1,28 @@
 # AWS CodeBuild spec to build an Elastic Beanstalk artifact for AWS CodePipeline to deploy
 version: 0.2
     
-name: "Attempt Build"
-on:
-  push:
-    branches:
-    - master
-  pull_request:
-    branches:
-    - master
-jobs:
+phases:   
+  install:
+    runtime-versions:
+      dotnet: latest
+      
+  pre_build:
+    commands:
+      - echo Restore started on `date`
+      - dotnet restore OperationDigger.csproj
+      
   build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Build
-      run: dotnet build OperationDigger.csproj
-    - name: Test
-      run: dotnet test --configuration Release --no-build
+    commands:
+      - echo Build started on `date`
+      - dotnet build OperationDigger.csproj
+      
+  post_build:
+    commands:
+      - echo Publish started on `date`
+      - dotnet publish -c Release -r linux-x64 --self-contained false OperationDigger.csproj
+      
+artifacts:
+  files:
+    - '**/*'
+  base-directory: ./bin/Release/netcoreapp3.1/linux-x64/publish/
+  discard-paths: no
